--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="icon" href="icon.png">
 </head>
 
 <body style='background-color: rgb(255, 247, 235); padding:20px;'>
