--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <h2 class='subtitle'>
         I'm pursuing a master's degree in Data Journalism at Columbia. I've worked as a reporter, editor and publisher.
-        My bylines have appeared in U.S. News and World Report, and The Seattle Times, among others!
+        I've worked as a publisher for <strong>Reuters'</strong> wire service Eikon, as a senior editor for <strong>Glance</strong>, and a local reporter for <strong>Idaho Press</strong>. 
         <br> <br>
         <strong>I also write a <a href="https://areena.substack.com" target="_blank"> weekly newsletter </a> on learning
             how to code, grad school, life in NYC and more!</strong>
