--- a/index.html
+++ b/index.html
@@ -58,12 +58,8 @@
     </h3>
     <br>
     <h2 style="font-size:x-large;"> <strong>Data work</strong></h2>
-    <p
-        style="color:rgb(0, 42, 0); font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: medium;">
-    <ul>
-        <li>
-            <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank"> Comparing different
-                newsrooms' style-guides </a>
+    <p>
+            <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank"> Comparing different newsrooms' style-guides </a>
             <br>
             Compare how different words are defined by different news organizations to get an insight into their
             editorial decisions. My hope is comparing older news orgs like Reuters to newer ones like BuzzFeed will be
@@ -71,10 +67,6 @@
             readership and would be interesting to measure all these five on the same scale. Some editorial decisions
             taken in this analysis include not scraping some unique features of each style guide — just in the interest
             of maintaining standardization across the board.
-
-
-        </li>
-    </ul>
     </p>
     <br>
     <h2 style='font-size:x-large;'> <strong>Reporting</strong></h2>
