--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="icon" href="icon.png">
+    <title>Home</title>
 </head>
 
-<body style='background-color: rgb(255, 247, 235); padding:20px;'>
+<body style='background-color: rgb(255, 247, 235); padding:35px;'>
     <h1
         style="font-size: 5rem; text-align: center; color: #02163ee9; background-color:rgb(255, 247, 235); background-size: contain">
         Hi! I'm Areena 👋🏼
@@ -47,6 +48,13 @@
             <h3>
                 <a href='https://www.linkedin.com/in/areena-arora' target="blank">
                     <i class="fab fa-linkedin fa-3x"></i>
+                </a>
+            </h3>
+        </div>
+        <div class='column is-one-fourth'>
+            <h3>
+                <a href='https://www.instagram.com/feelin_gredient' target="blank">
+                    <i class="fab fa-instagram fa-3x"></i>
                 </a>
             </h3>
         </div>
@@ -138,4 +146,8 @@
             fundraising efforts. November 2017
         </div>
     </div>
+<br>
+<p style='font-family: monospace; text-align: center; font-size: 4 rem;'>
+    <strong>I also cook!</strong>
+</p>
 </body>
