--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class='column is-one-fourth'>
             <h3>
                 <a href='https://www.instagram.com/feelin_gredient' target="blank">
-                    <i class="fab fa-instagram fa-3x"></i>
+                    <i class="fab fa-instagram-square fa-3x"></i>
                 </a>
             </h3>
         </div>
