--- a/index.html
+++ b/index.html
@@ -7,51 +7,54 @@
     <title>Home</title>
 </head>
 
-<body style='background-color: rgb(255, 247, 235); padding:35px;'>
+<body style='background-color: #FBFCFC; padding:35px;'>
     <h1
-        style="font-size: 5rem; text-align: center; color: #02163ee9; background-color:rgb(255, 247, 235); background-size: contain">
+        style="font-size: 5rem; text-align: center; color: #02163ee9; background-size: contain">
         Hi! I'm Areena 👋🏼
     </h1>
 
     <h2 class='subtitle'>
         I'm pursuing a master's degree in Data Journalism at Columbia. I've worked as a reporter, editor and publisher.
-        I've worked as a publisher for <strong>Reuters'</strong> wire service Eikon, as a senior editor for <strong>Glance</strong>, and a local reporter for <strong>Idaho Press</strong>. 
+        I've worked as a publisher for <strong>Reuters'</strong> wire service Eikon, as a senior editor for
+        <strong>Glance</strong>, and a local reporter for <strong>Idaho Press</strong>.
         <br> <br>
         <strong>I also write a <a href="https://areena.substack.com" target="_blank"> weekly newsletter </a> on learning
             how to code, grad school, life in NYC and more!</strong>
+        <br>
+        <a class="button is-danger" href='https://areena.substack.com/subscribe' target='blank'>Subscribe Here</a>
     </h2>
 
     <br>
-    <div class="columns is-multiline;">
-        <div class='column is-one-fourth'>
+    <div class="columns is-multiline">
+        <div class='column is-one-fifth'>
             <h3>
                 <a href='mailto:areena.arora@columbia.edu?Subject=Hello!' target='blank'>
                     <i class="fas fa-inbox fa-3x"></i>
                 </a>
             </h3>
         </div>
-        <div class='column is-one-fourth'>
+        <div class='column is-one-fifth'>
             <h3>
                 <a href='https://twitter.com/AreenaArora' target='blank'>
                     <i class="fab fa-twitter fa-3x"></i>
                 </a>
             </h3>
         </div>
-        <div class="column is-one-fourth">
+        <div class="column is-one-fifth">
             <h3>
                 <a href='https://github.com/areenaarora' target='blank'>
                     <i class="fab fa-github fa-3x"></i>
                 </a>
             </h3>
         </div>
-        <div class='column is-one-fourth'>
+        <div class='column is-one-fifth'>
             <h3>
                 <a href='https://www.linkedin.com/in/areena-arora' target="blank">
                     <i class="fab fa-linkedin fa-3x"></i>
                 </a>
             </h3>
         </div>
-        <div class='column is-one-fourth'>
+        <div class='column is-one-fifth'>
             <h3>
                 <a href='https://www.instagram.com/feelin_gredient' target="blank">
                     <i class="fab fa-instagram-square fa-3x"></i>
@@ -59,27 +62,28 @@
             </h3>
         </div>
     </div>
-
-    <h3
-        style="color:rgb(8, 31, 48); font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: 2rem; text-align: center;">
+    <br><br>
+    <h3 class="title is-3 has-text-centered is-family-secondary">
         <strong>Here's some of my work</strong>
     </h3>
     <br>
     <h2 style="font-size:x-large;"> <strong>Data work</strong></h2>
     <p>
-            <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank"> Comparing different newsrooms' style-guides </a>
-            <br>
-            Compare how different words are defined by different news organizations to get an insight into their
-            editorial decisions. My hope is comparing older news orgs like Reuters to newer ones like BuzzFeed will be
-            reflective of the industry's editorial direction as a whole. The news orgs I've chosen have a wide ranging
-            readership and would be interesting to measure all these five on the same scale. Some editorial decisions
-            taken in this analysis include not scraping some unique features of each style guide — just in the interest
-            of maintaining standardization across the board.
+        <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank"> <strong>Comparing
+                different newsrooms' style-guides </a></strong>
+        <br>
+        Compare how different words are defined by different news organizations to get an insight into their
+        editorial decisions. My hope is comparing older news orgs like Reuters to newer ones like BuzzFeed will be
+        reflective of the industry's editorial direction as a whole. The news orgs I've chosen have a wide ranging
+        readership and would be interesting to measure all these five on the same scale. Some editorial decisions
+        taken in this analysis include not scraping some unique features of each style guide — just in the interest
+        of maintaining standardization across the board.<strong> Dec 2021</strong>
     </p>
     <br>
     <h2 style='font-size:x-large;'> <strong>Reporting</strong></h2>
     <br>
-    <h3 style='font-size: large; color: rgb(15, 0, 26);'>Accountability, Investigative & Crime reporting</h3>
+    <h3 style='font-size: large; color: rgb(15, 0, 26);'><strong>Accountability, Investigative & Crime
+            reporting</strong></h3>
     <br>
     <p
         style="color:rgb(0, 42, 0); font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: medium;">
@@ -87,67 +91,77 @@
         <div class="column is-one-third">
 
             <a href='https://www.idahopress.com/news/local/2cscoop/indian-creek-plaza-over-budget-and-behind-original-construction-schedule/article_729c087a-780c-5202-bacf-34255edb016d.html'
-                target="_blank">Indian Creek Plaza — over budget and behind original construction schedule</a>. A
-            deep-dive about delays in the city's then biggest project. Also covered budget overage. Extensively used
-            public records, govt officials' memos and coverage from city agencies' meetings. October 2017
+                target="_blank"><strong>Indian Creek Plaza — over budget and behind original construction
+                    schedule</a></strong><br>
+            A deep-dive about delays in the city's then biggest project. Also covered budget overage. Extensively used
+            public records, govt officials' memos and coverage from city agencies' meetings. <strong>October
+                2017</strong>
 
         </div>
         <div class="column is-one-third">
 
             <a href='https://www.idahopress.com/news/local/2cscoop/national-christmas-tree-shortage-drives-up-prices-at-canyon-county-tree-lots/article_1844a843-db04-523e-8db0-17b1d204e7ca.html'
-                target="_blank"> National Christmas tree shortage drives up prices at Canyon County tree lots</a>.
-            Holiday special on why a decade after the recession Christmas tree got hit. November 2017
+                target="_blank"><strong>National Christmas tree shortage drives up prices at Canyon County tree
+                    lots</a></strong><br>
+            Holiday special on why a decade after the recession Christmas tree got hit. <strong>November 2017</strong>
 
         </div>
         <div class='column is-one-third'>
             <a href='https://www.idahopress.com/news/local/2cscoop/at-columbia-high-in-nampa-300-students-walk-out-majority-do-not/article_8b759674-ace6-5b55-adcc-39071b629a11.html'
-                target="_blank"> At Columbia High in Nampa, 300 students walk out, majority do not</a>. Part of the
-            paper's series of local schools' coverage on the day of anti-gun walkouts following the 2018 Parkland
-            shooting. March 2018
+                target="_blank"> <strong>Culvert concerns: Culvert report reveals 11 other structures in deficient
+                    condition</a><br> </strong>Data-driven story on city's inaction on damaging culverts. Also inspected
+            inter-agency jurisdiction issues. <strong>Dec 2017</strong>
         </div>
         <div class="column is-one-third">
-
             <a href='https://www.idahopress.com/news/local/2cscoop/prosecutor-retired-boise-priest-found-with-child-porn-drugs/article_403079a5-4491-57f3-8a9e-9e91e3de8651.html'
-                target="_blank">Prosecutor: Retired Boise priest found with child porn, drugs</a>. Court reporting.
-            February 2018
-
+                target="_blank"><strong>Prosecutor: Retired Boise priest found with child porn, drugs</a></strong><br>
+            Court reporting. <strong>February 2018</strong>
+        </div>
+        <div class='column is-one-third'>
+            <a href='https://www.idahopress.com/news/local/2cscoop/at-columbia-high-in-nampa-300-students-walk-out-majority-do-not/article_8b759674-ace6-5b55-adcc-39071b629a11.html'
+                target="_blank"> <strong>At Columbia High in Nampa, 300 students walk out, majority do not</a><br>
+            </strong>Part of the paper's series of local schools' coverage on the day of anti-gun walkouts following the
+            2018 Parkland
+            shooting. <strong>March 2018</strong>
         </div>
         <div class="column is-one-third">
 
             <a href='https://www.idahopress.com/news/local/2cscoop/new-pallet-service-center-to-open-in-caldwell/article_e67a76b4-c8e6-5196-ad5b-73c5cc82f7ac.html'
-                target="_blank">Then and now: What Caldwell's foreign trade zone has done for the area</a> Local
-            government accountability reporting. April 2018
-
+                target="_blank"><strong>Then and now: What Caldwell's foreign trade zone has done for the
+                    area</a></strong><br>
+            Local government accountability reporting. <strong>April 2018</strong>
         </div>
         </p>
     </div>
     <br>
 
-    <h3 style='font-size: large; color: rgb(15, 0, 26);'>Feature reporting</h3>
+    <h3 style='font-size: large; color: rgb(15, 0, 26);'><strong>Feature reporting</strong></h3>
     <br>
     <div class="columns is-multiline">
         <p
             style="color:rgb(0, 42, 0); font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: medium;">
         <div class="column is-one-third">
-            <a href='https://apnews.com/article/10ab9cb7a5e24bdd86337d36a48c539b' target="_blank">As housing inventory
-                shrinks, people look to living in RVs</a>. Special report about Idaho residents choosing to live in RVs
-            full-time owing to sky-rocketing housing prices. April 2018
+            <a href='https://apnews.com/article/10ab9cb7a5e24bdd86337d36a48c539b' target="_blank"><strong>As housing
+                    inventory shrinks, people look to living in RVs</a></strong><br>
+            Special report about Idaho residents choosing to live in RVs full-time owing to sky-rocketing housing
+            prices. <strong>April 2018</strong>
         </div>
         <br>
         <div class="column is-one-third">
             <a href='https://www.idahopress.com/news/local/2cscoop/in-the-midst-of-an-immigration-stir-up-one-local-teen-is-ready-to-fight/article_97bde17b-604a-55e0-9dcf-bc946b688916.html'
-                target="_blank"> In the midst of an immigration stir up, one local teen is ready to fight</a>. September
-            2017
+                target="_blank"><strong>In the midst of an immigration stir up, one local teen is ready to
+                    fight</a></strong><br>
+            <strong>September 2017</strong>
         </div>
         <br>
         <div class="column is-one-third">
             <a href='https://www.idahopress.com/news/local/2cscoop/middleton-samaritan-hopes-to-see-again/article_40cb2683-c384-5b7b-a5fb-0e044968a52e.html'
-                target="_blank"> Middleton Samaritan hopes to see again</a>. Human-interest story on a samaritan's
-            fundraising efforts. November 2017
+                target="_blank"><strong>Middleton Samaritan hopes to see again</a></strong><br>
+            Human-interest story on a samaritan's fundraising efforts. <strong>November 2017</strong>
         </div>
     </div>
-<br>
-<p style='font-family: monospace; text-align: center; font-size: 4 rem;'>
-    <strong>I also cook!</strong>
-</p>
+    <br>
+    <p style='font-family: monospace; text-align: center; font-size: 4 rem;'>
+        <strong>I also cook!</strong>
+    </p>
 </body>
