--- a/index.html
+++ b/index.html
@@ -6,8 +6,35 @@
     <link rel="icon" href="icon.png">
     <title>Home</title>
 </head>
-
-<body style='background-color: #FBFCFC; padding:35px;'>
+<nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
+    <ul>
+      <li>
+        <a href="#">
+          <span class="icon is-small">
+            <i class="fas fa-home" aria-hidden="true"></i>
+          </span>
+          <span>Home</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="icon is-small">
+            <i class="fas fa-book" aria-hidden="true"></i>
+          </span>
+          <span>Resume</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="icon is-small">
+            <i class="fas fa-pepper-hot" aria-hidden="true"></i>
+          </span>
+          <span>Recipes</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+<body style='background-color: #FBFCFC; padding:40px;'>
     <h1
         style="font-size: 5rem; text-align: center; color: #02163ee9; background-size: contain">
         Hi! I'm Areena 👋🏼
