--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="https://areenaarora.com/resume">
           <span class="icon is-small">
             <i class="fas fa-book" aria-hidden="true"></i>
           </span>
