--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <span class="icon is-small">
             <i class="fas fa-pepper-hot" aria-hidden="true"></i>
           </span>
-          <span>Recipes</span>
+          <span>Curries</span>
         </a>
       </li>
     </ul>
