--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
     <ul>
       <li>
-        <a href="https://areenaarora.com/Home">
+        <a href="https://areenaarora.com">
           <span class="icon is-small">
             <i class="fas fa-home" aria-hidden="true"></i>
           </span>
