--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             I'm pursuing a master's degree in <span style='color: rgb(242, 90, 242); font-weight: bold;'> Data Journalism </span> at <a href='https://journalism.columbia.edu/'><span style='font-weight:bold'>Columbia</a></span>. I've worked as a reporter, editor and
             publisher.
             I've worked as a publisher for <span style='color: rgb(253, 126, 41); font-weight: bold;'>Reuters'</span> wire service Eikon, as a senior editor for
-            <strong>Glance</strong>, and a local reporter for <strong><span style='color: rgb(38, 133, 12); font-weight: bold;'>Idaho Press</strong></span>.
+            <strong><span style='color: rgb(239, 60, 60); font-weight: bold;'>Glance</span></strong>, and a local reporter for <strong><span style='color: rgb(38, 133, 12); font-weight: bold;'>Idaho Press</strong></span>.
             <br> <br>
             <strong>I also write a <a href="https://areena.substack.com" target="_blank"> weekly newsletter </a> on
                 learning
@@ -88,7 +88,7 @@
             reflective of the industry's editorial direction as a whole. The news orgs I've chosen have a wide ranging
             readership and would be interesting to measure all these five on the same scale. Some editorial decisions
             taken in this analysis include not scraping some unique features of each style guide — just in the interest
-            of maintaining standardization across the board.<strong> Dec 2021</strong>
+            of maintaining standardization across the board.<strong> December 2021</strong>
         </p>
         <br>
         <h2 style='font-size:x-large;'> <strong>Reporting</strong></h2>
@@ -124,7 +124,7 @@
                     target="_blank"> <strong>Culvert concerns: Culvert report reveals 11 other structures in deficient
                         condition</a><br> </strong>Data-driven story on city's inaction on damaging culverts. Also
                 inspected
-                inter-agency jurisdiction issues. <strong>Dec 2017</strong>
+                inter-agency jurisdiction issues. <strong>December 2017</strong>
             </div>
             <div class="column is-one-third">
                 <a href='https://www.idahopress.com/news/local/2cscoop/prosecutor-retired-boise-priest-found-with-child-porn-drugs/article_403079a5-4491-57f3-8a9e-9e91e3de8651.html'
