--- a/index.html
+++ b/index.html
@@ -42,12 +42,11 @@
         </h1>
 
         <h2 class='subtitle'>
-            I'm pursuing a master's degree in <span style='color: rgb(242, 90, 242); font-weight: bold;'> Data Journalism </span> at <a href='https://journalism.columbia.edu/'><span style='font-weight:bold'>Columbia</a></span>. I've worked as a reporter, editor and
-            publisher.
-            I've worked as a publisher for <span style='color: rgb(253, 126, 41); font-weight: bold;'>Reuters'</span> wire service Eikon, as a senior editor for
+            I'm pursuing a master's degree in <span style='color: rgb(242, 90, 242); font-weight: bold;'> Data Journalism </span> at <a href='https://journalism.columbia.edu/'><span style='font-weight:bold'>Columbia</a></span>. 
+            I've worked as a publisher for <span style='color: rgb(253, 126, 41); font-weight: bold;'>Reuters'</span> wire service Eikon, as a senior-editor for
             <strong><span style='color: rgb(239, 60, 60); font-weight: bold;'>Glance</span></strong>, and a local reporter for <strong><span style='color: rgb(38, 133, 12); font-weight: bold;'>Idaho Press</strong></span>.
             <br> <br>
-            <strong>I also write a <a href="https://areena.substack.com" target="_blank"> weekly newsletter </a> on
+            <strong>I write a <a href="https://areena.substack.com" target="_blank"> weekly newsletter </a> on
                 learning
                 how to code, grad school, life in NYC and more!</strong>
             <br> <br>
