--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
         <h3 style='font-size: large; color: rgb(15, 0, 26);'><strong>Accountability, Investigative & Crime
                 reporting</strong></h3>
         <br>
-        <p
-            style="color:rgb(0, 42, 0); font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: medium;">
+        <p style="color:rgb(0, 42, 0); font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: medium;">
         <div class="columns is-multiline">
             <div class="column is-one-third">
 
