--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="icon" href="icon.png">
     <title>Home</title>
 </head>
-
 <body style='background-color: #FBFCFC; padding:40px;'>
     <div style="width: 65%; margin: 0 auto;">
         <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
@@ -95,7 +94,8 @@
         <h3 style='font-size: large; color: rgb(15, 0, 26);'><strong>Accountability, Investigative & Crime
                 reporting</strong></h3>
         <br>
-        <p style="color:rgb(0, 42, 0); font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: medium;">
+        <p
+            style="color:rgb(0, 42, 0); font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: medium;">
         <div class="columns is-multiline">
             <div class="column is-one-third">
 
