--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <a href='https://apnews.com/article/10ab9cb7a5e24bdd86337d36a48c539b' target="_blank"><strong>As housing
                         inventory shrinks, people look to living in RVs</a></strong><br>
                 Special report about Idaho residents choosing to live in RVs full-time owing to sky-rocketing housing
-                prices. <strong>April 2018</strong>
+                prices. <br><strong>April 2018</strong>
             </div>
             <br>
             <div class="column is-one-third">
