--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
             <strong>Here's some of my work</strong>
         </h3>
         <br>
-        <h2 style="font-size:x-large;"> <strong>Data work</strong></h2>
+        <h2 style="font-size:x-large;"> <strong>Data</strong></h2>
         <p>
             <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank"> <strong>Comparing
                     different newsrooms' style-guides </a></strong>
             <br>
-            Compare how different words are defined by different news organizations to get an insight into their
-            editorial decisions. My hope is comparing older news orgs like Reuters to newer ones like BuzzFeed will be
-            reflective of the industry's editorial direction as a whole. The news orgs I've chosen have a wide ranging
-            readership and would be interesting to measure all these five on the same scale. Some editorial decisions
-            taken in this analysis include not scraping some unique features of each style guide — just in the interest
-            of maintaining standardization across the board.<strong> December 2021</strong>
+            <span style='font-family: monospace; font-weight: bold; font-size: 18px;'>
+            Tech stack used: Python[BeautifulSoup and Pandas], Regex, PDFMiner, HTML, Excel</span>
+            <br>
+            Compared how different words are defined by different news organizations to get an insight into their
+            editorial decisions. The news orgs I chose have a wide ranging
+            readership and would be interesting to measure all these five (BBC, BuzzFeed, NPR, Reuters, The Guardian) on the same scale.<strong> December 2021</strong>
         </p>
         <br>
         <h2 style='font-size:x-large;'> <strong>Reporting</strong></h2>
