--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 learning
                 how to code, grad school, life in NYC and more!</strong>
             <br> <br>
-            <a class="button is-danger" href='https://areena.substack.com/subscribe' target='blank'>Click here to subscribe</a>
+            <a class="button is-danger" href='https://areena.substack.com/subscribe?utm_source=menu&simple=true&next=https%3A%2F%2Fareena.substack.com%2Fabout%3Futm_source%3Dsubscribe_email%26utm_content%3Dlearn_more' target='blank'>Click here to subscribe</a>
         </h2>
         <div style="display: flex; gap:15px; justify-content: center;">
             <a href='mailto:areena.arora@columbia.edu?Subject=Hello!' target='blank'>
