--- a/index.html
+++ b/index.html
@@ -49,11 +49,15 @@
                 learning
                 how to code, grad school, life in NYC and more!</strong>
             <br> <br>
-            <a class="button is-danger" href='https://areena.substack.com/subscribe?utm_source=menu&simple=true&next=https%3A%2F%2Fareena.substack.com%2Fabout%3Futm_source%3Dsubscribe_email%26utm_content%3Dlearn_more' target='blank'>Click here to subscribe</a>
+            <!-- <a class="button is-danger" href='https://areena.substack.com/subscribe?utm_source=menu&simple=true&next=https%3A%2F%2Fareena.substack.com%2Fabout%3Futm_source%3Dsubscribe_email%26utm_content%3Dlearn_more' target='blank'>Click here to subscribe</a> -->
+        <div style='display: flex; gap:15px; justify-content: center;'>
+            <iframe src="https://areena.substack.com/embed" width="470" height="170" style="border:0px solid #A569BD; background:FBFCFC;" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <br>
         </h2>
         <div style="display: flex; gap:15px; justify-content: center;">
             <a href='mailto:areena.arora@columbia.edu?Subject=Hello!' target='blank'>
-                <i class="fas fa-inbox fa-2x"></i>
+                <i class="fas fa-envelope fa-2x"></i>
             </a>
             <a href='https://twitter.com/AreenaArora' target='blank'>
                 <i class="fab fa-twitter fa-2x"></i>
