--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li>
                     <a href="https://areenaarora.com">
-                        <span class="icon is-small">
+                        <span class="icon is-small;">
                             <i class="fas fa-home" aria-hidden="true"></i>
                         </span>
                         <span>Home</span>
@@ -53,7 +53,6 @@
         <div style='display: flex; gap:15px; justify-content: center;'>
             <iframe src="https://areena.substack.com/embed" width="470" height="170" style="border:0px solid #A569BD; background:FBFCFC;" frameborder="0" scrolling="no"></iframe>
         </div>
-        <br>
         </h2>
         <div style="display: flex; gap:15px; justify-content: center;">
             <a href='mailto:areena.arora@columbia.edu?Subject=Hello!' target='blank'>
@@ -72,7 +71,6 @@
                 <i class="fab fa-instagram-square fa-2x"></i>
             </a>
         </div>
-
         <br>
         <h3 class="title is-3 has-text-centered is-family-secondary">
             <strong>Here's some of my work</strong>
@@ -176,5 +174,8 @@
             </div>
         </div>
         <br>
+        <p style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ; color:#704868; font-size: 1 em; font-weight: bolder; text-align: center;">
+        Made with 💟 and chai
+        </p>
     </div>
 </body>
