--- a/index.html
+++ b/index.html
@@ -45,13 +45,11 @@
             I've worked as a publisher for <span style='color: rgb(253, 126, 41); font-weight: bold;'>Reuters'</span> wire service Eikon, as a senior-editor for
             <strong><span style='color: rgb(239, 60, 60); font-weight: bold;'>Glance</span></strong>, and a local reporter for <strong><span style='color: rgb(38, 133, 12); font-weight: bold;'>Idaho Press</strong></span>.
             <br> <br>
-            <strong>I write a <a href="https://areena.substack.com" target="_blank"> weekly newsletter </a> on
-                learning
-                how to code, grad school, life in NYC and more!</strong>
+            <strong>I write a <a href="https://areena.substack.com" target="_blank"> weekly newsletter </a> on learning how to code, grad school, life in NYC and more!</strong>
             <br> <br>
             <!-- <a class="button is-danger" href='https://areena.substack.com/subscribe?utm_source=menu&simple=true&next=https%3A%2F%2Fareena.substack.com%2Fabout%3Futm_source%3Dsubscribe_email%26utm_content%3Dlearn_more' target='blank'>Click here to subscribe</a> -->
         <div style='display: flex; gap:15px; justify-content: center;'>
-            <iframe src="https://areena.substack.com/embed" width="470" height="170" style="border:0px solid #A569BD; background:FBFCFC;" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://areena.substack.com/embed" width="465" height="165" style="border:0px solid #A569BD; background:FBFCFC;" frameborder="0" scrolling="no"></iframe>
         </div>
         </h2>
         <div style="display: flex; gap:15px; justify-content: center;">
