--- a/resume.html
+++ b/resume.html
@@ -6,26 +6,38 @@
     <link rel="icon" href="icon.png">
     <title>Resume</title>
 </head>
+
 <body style='background-color: #FBFCFC; padding:40px;'>
     <div style="width: 65%; margin: 0 auto;">
-    <h2 style="font-size:x-large;"> <strong>Experience</strong></h2>
-    <br>
-
-<p><span style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>InMobi Glance Bengaluru, India</span>
-    <p class='subtitle'>Senior Sub-Editor Dec 2019 - July 2020</p>
-    I curated and presented stories in a visually attractive manner. I was at the forefront of the product’s expansion in the U.S., helping co-lead a team of global editors. I handled breaking stories, live events and collaborated with creatives to present news to 100 million+ active users in the most visually appealing way possible. Recognized with a 'Real Star' award for my news-judgement and willingness to initiate and lead projects.
-</p>
-    <br>
-    Reuters Bengaluru, India
-    News Publishing Specialist Jul 2018 - Dec 2019
-    I curated and packaged financial and political news on Reuters’ Eikon platform. The role required a strong general and markets' news judgment. I also designed and compiled newsletters on Brexit, Debt, and Forex Markets.
-    <br>
-    Idaho Press Nampa, ID Reporter June 2017 - April 2018
-    I covered city hall and businesses in the city of Caldwell. My reporting was sourced by filing requests for public records and using that data to tell stories. I also produced long form story packages and covered breaking news, as needed.
-    <br>
-    The Transcript Delaware, OH (student newspaper)
-    Managing Editor Jan 2016 - Dec 2016
-    I covered faculty meetings, student government, general campus news, and (occasionally) sports as the Managing Editor for one of the oldest running independent student newspaper in the country, The Transcript.
-    I was also responsible for designing pages for our biweekly print publication, taking photographs, assigning and editing stories and was charged with leading an investigative reporting project.
-</div>    
+        <h2 style="font-size:x-large; text-align: center;"> <strong>Experience</strong></h2>
+        <br><br>
+        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>InMobi Glance Bengaluru, India</p>
+        <p class='subtitle'>Senior Sub-Editor Dec 2019 - July 2020</p>
+        <p>I curated and presented stories in a visually attractive manner. I was at the forefront of the product’s expansion in the U.S., helping co-lead a team of global editors. I handled breaking stories, live events and collaborated with creatives to present news to 100 million+ active users in the most visually appealing way possible. Recognized with a 'Real Star' award for my news-judgement and willingness to initiate and lead projects.
+        </p>
+        <br><br>
+        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>Reuters Bengaluru, India</p>
+        <p class='subtitle'>News Publishing Specialist Jul 2018 - Dec 2019</p>
+        <p>I curated and packaged financial and political news on Reuters’ Eikon platform. The role required a strong general and markets' news judgment. I also designed and compiled newsletters on Brexit, Debt, and Forex Markets.</p>
+        <br><br>
+        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>Idaho Press Nampa, ID</p>
+        <p class='subtitle'>Reporter June 2017 - April 2018</p>
+        <p> I covered city hall and businesses in the city of Caldwell. My reporting was sourced by filing requests for public records and using that data to tell stories. I also produced long form story packages and covered breaking news, as needed.</p>
+        <br><br>
+        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>The Transcript Delaware, OH (student newspaper)</p>
+        <p class='subtitle'>Managing Editor Jan 2016 - Dec 2016</p>
+        <p> I covered faculty meetings, student government, general campus news, and (occasionally) sports as the Managing Editor for one of the oldest running independent student newspaper in the country, The Transcript. I was also responsible for designing pages for our biweekly print publication, taking photographs, assigning and editing stories and was charged with leading an investigative reporting project.</p>
+        <br>
+        <br>
+        <br>
+        <h2 style="font-size:x-large; text-align: center;"> <strong>Education</strong></h2>
+        <br><br>
+        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>Columbia University, Graduate School of Journalism Master of Science Data Journalism candidate</p>
+        <p class='subtitle'>Expected graduation: August 2022 - July 2020</p>
+        <p>Interested in exploring the impact of climate change on infrastructure. Earned honors in Media Ethics class.</p>
+        <br><br>
+        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>Ohio Wesleyan University, Bachelor of Arts</p>
+        <p class='subtitle'>2017</p>
+        <p>Majored in journalism and graduated one year early. Led multiple student organizations including international students’ association.</p>
+    </div>
 </body>
