--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,40 @@
 
 <body style='background-color: #FBFCFC; padding:40px;'>
     <div style="width: 65%; margin: 0 auto;">
+        <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
+            <ul>
+                <li>
+                    <a href="https://areenaarora.com/Resume-AreenaArora">
+                        <span class="icon is-small">
+                            <i class="fas fa-download" aria-hidden="true"></i>
+                        </span>
+                        <span>Download resume</span>
+                    </a>
+                    <a href="https://areenaarora.com">
+                        <span class="icon is-small">
+                            <i class="fas fa-home" aria-hidden="true"></i>
+                        </span>
+                        <span>Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://areenaarora.com/resume">
+                        <span class="icon is-small">
+                            <i class="fas fa-book" aria-hidden="true"></i>
+                        </span>
+                        <span>Resume</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="icon is-small">
+                            <i class="fas fa-pepper-hot" aria-hidden="true"></i>
+                        </span>
+                        <span>Curries</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
         <h2 style="font-size:x-large; text-align: center;"> <strong>Experience</strong></h2>
         <br><br>
         <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>InMobi Glance Bengaluru, India</p>
