Added style sheet

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="icon" href="icon.png">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Home</title>
 </head>
-<body style='background-color: #FBFCFC; padding:40px;'>
+<!-- <body style='background-color: #FBFCFC; padding:40px;'> -->
+<body>
     <div style="width: 65%; margin: 0 auto;">
         <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
             <ul>
@@ -36,7 +38,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 style="font-size: 5rem; text-align: center; color: #02163ee9; background-size: contain">
+        <h1>
             Hi! I'm Areena 👋🏼
         </h1>
 
@@ -46,11 +48,10 @@
             <strong><span style='color: rgb(239, 60, 60); font-weight: bold;'>Glance</span></strong>, and a local reporter for <strong><span style='color: rgb(38, 133, 12); font-weight: bold;'>Idaho Press</strong></span>.
             <br> <br>
             <strong>I write a <a href="https://areena.substack.com" target="_blank"> weekly newsletter </a> on learning how to code, grad school, life in NYC and more!</strong>
-            <br> <br>
-            <!-- <a class="button is-danger" href='https://areena.substack.com/subscribe?utm_source=menu&simple=true&next=https%3A%2F%2Fareena.substack.com%2Fabout%3Futm_source%3Dsubscribe_email%26utm_content%3Dlearn_more' target='blank'>Click here to subscribe</a> -->
         <div style='display: flex; gap:15px; justify-content: center;'>
-            <iframe src="https://areena.substack.com/embed" width="465" height="165" style="border:0px solid #A569BD; background:FBFCFC;" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://areena.substack.com/embed" width="470" height="170" style="border:0px solid #A569BD; background:FBFCFC;" frameborder="0" scrolling="no"></iframe>
         </div>
+        <br>
         </h2>
         <div style="display: flex; gap:15px; justify-content: center;">
             <a href='mailto:areena.arora@columbia.edu?Subject=Hello!' target='blank'>
@@ -73,7 +74,7 @@
         <h3 class="title is-3 has-text-centered is-family-secondary">
             <strong>Here's some of my work</strong>
         </h3>
-        <h2 style="font-size:x-large;"> <strong>Data</strong></h2>
+        <h2><strong>Data</strong></h2>
         <p>
             <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank"> <strong>Comparing
                     different newsrooms' style-guides </a></strong>
@@ -86,9 +87,9 @@
             readership and would be interesting to measure all these five (BBC, BuzzFeed, NPR, Reuters, The Guardian) on the same scale.<strong> December 2021</strong>
         </p>
         <br>
-        <h2 style='font-size:x-large;'> <strong>Reporting</strong></h2>
+        <h2> <strong>Reporting</strong></h2>
         <br>
-        <h3 style='font-size: large; color: rgb(15, 0, 26);'><strong>Accountability, Investigative & Crime
+        <h4 style='font-size: large; color: rgb(15, 0, 26);'><strong>Accountability, Investigative & Crime
                 reporting</strong></h3>
         <br>
         <p
@@ -146,7 +147,7 @@
         </div>
         <br>
 
-        <h3 style='font-size: large; color: rgb(15, 0, 26);'><strong>Feature reporting</strong></h3>
+        <h4 style='font-size: large; color: rgb(15, 0, 26);'><strong>Feature reporting</strong></h3>
         <br>
         <div class="columns is-multiline">
             <p
